Massive refactor! WIP so PR comments not fully addressed (yet).
  * Evaluator is gone.  Most of it is in `garbage-collector` and `worker`.
  * Models now have to `export default` rather than set `result`.
  * Examples have been updated accordingly, and moved to `test/examples`.

--- a/bindings/wasm/examples/index.html
+++ b/bindings/wasm/examples/index.html
@@ -33,7 +33,7 @@
     self.ModelViewerElement = self.ModelViewerElement || {};
     self.ModelViewerElement.modelCacheSize = 0;
   </script>
-  <script type="module" src="/examples.js"></script>
+  <script type="module" src="/editor-examples.js"></script>
 </head>
 
 <body>
