Add user guide link to the editor

--- a/bindings/wasm/examples/index.html
+++ b/bindings/wasm/examples/index.html
@@ -44,7 +44,8 @@
           <button type="button" id="undo" class="top-icon undo squish"></button>
           <button type="button" id="redo" class="top-icon redo squish"></button>
           <button type="button" id="format" class="top-icon star squish"></button>
-          <button type="button" id="share" class="top-icon share"></button>
+          <button type="button" id="share" class="top-icon share squish"></button>
+          <a target="_blank" href="https://manifoldcad.org/docs/jsuser/" class="top-icon docs"></a>
         </span>
       </p>
       <div class="margin" id="file-margin">
