--- a/bindings/wasm/examples/make-manifold/make-manifold.html
+++ b/bindings/wasm/examples/make-manifold/make-manifold.html
@@ -60,6 +60,8 @@
   </model-viewer>
 </body>
 
-<script>import { ModelViewerElement } from '@google/model-viewer';</script>
+<script type="module">
+import { ModelViewerElement } from '@google/model-viewer';
+</script>
 <script type="module" src="make-manifold.ts"></script>
 </html>
