--- a/bindings/wasm/examples/model-viewer/model-viewer.html
+++ b/bindings/wasm/examples/model-viewer/model-viewer.html
@@ -53,7 +53,8 @@
     alt="Output of mesh Boolean operation"></model-viewer>
 </body>
 
-<script>import { ModelViewerElement } from '@google/model-viewer';</script>
+<script type="module">
+import { ModelViewerElement } from '@google/model-viewer';
+</script>
 <script type="module" src="model-viewer-script.ts"></script>
-
 </html>
