Separate Editor and Examples for clarity. (#1536)
* Separate examples and editor.

* Make each sub-package place nice with NPM.

* It has been [0] days since the last linter error.

* Make CI work with separate examples.

* More tests, more tweaks.

* Move editor back under examples.

* It has been [0] days since the last linter error.

* Update lockfiles.

--- a/bindings/wasm/examples/make-manifold/make-manifold.html
+++ b/bindings/wasm/examples/make-manifold/make-manifold.html
@@ -59,7 +59,9 @@
     <span id="poster" slot="poster">Drop a GLB here</span>
   </model-viewer>
 </body>
-<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
-<script type="module" src="make-manifold.ts"></script>
 
+<script type="module">
+import { ModelViewerElement } from '@google/model-viewer';
+</script>
+<script type="module" src="make-manifold.ts"></script>
 </html>
