--- a/bindings/wasm/examples/editor/index.html
+++ b/bindings/wasm/examples/editor/index.html
@@ -33,7 +33,6 @@
     self.ModelViewerElement = self.ModelViewerElement || {};
     self.ModelViewerElement.modelCacheSize = 0;
   </script>
-  <script type="module" src="/editor-examples.js"></script>
 </head>
 
 <body>
@@ -88,14 +87,9 @@
     </div>
   </div>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.34.0/min/vs/loader.min.js"
-  integrity="sha512-6bIYsGqvLpAiEBXPdRQeFf5cueeBECtAKJjIHer3BhBZNTV3WLcLA8Tm3pDfxUwTMIS+kAZwTUvJ1IrMdX8C5w=="
-  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<link rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.34.0/min/vs/editor/editor.main.min.css"
-  integrity="sha512-iQEIc0rsSDujsfjtD+lfyJ1W23Bh/lbgriubKDAym6VlEIDRj9rrbSIyJRyshOrl8s0yRcQ0+gyrZfSLyjJGWQ=="
-  crossorigin="anonymous" referrerpolicy="no-referrer">
+<script type="module">
+import { ModelViewerElement } from '@google/model-viewer';
+</script>
+<script type="module" src="editor-examples.js"></script>
 <script type="module" src="editor.js"></script>
-<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
-
 </html>
