--- a/bindings/wasm/examples/model-viewer/model-viewer.html
+++ b/bindings/wasm/examples/model-viewer/model-viewer.html
@@ -52,7 +52,9 @@
   <model-viewer camera-controls shadow-intensity="1" tone-mapping="neutral"
     alt="Output of mesh Boolean operation"></model-viewer>
 </body>
-<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
-<script type="module" src="model-viewer-script.ts"></script>
 
+<script type="module">
+import { ModelViewerElement } from '@google/model-viewer';
+</script>
+<script type="module" src="model-viewer-script.ts"></script>
 </html>
